--- a/gitops/apps/home-assistant/dashboards/light_schedule_dashboard.yaml
+++ b/gitops/apps/home-assistant/dashboards/light_schedule_dashboard.yaml
@@ -14,9 +14,6 @@ views:
               - entity: input_select.room_schedule_selector
                 name: Select Room to Configure
                 icon: mdi:home-edit
-              - entity: input_select.room_switch_selector
-                name: Select Switch to Configure
-                icon: mdi:light-switch
           
           # Dynamic room configuration using template
           - type: conditional
@@ -55,23 +52,18 @@ views:
                     - entity: input_select.living_room_schedule_4_scene
                     - entity: input_select.living_room_schedule_5_scene
                     - entity: input_select.living_room_default_scene
-                - type: conditional
-                  conditions:
-                    - entity: input_select.room_switch_selector
-                      state: main_switch
-                  card:
-                    type: entities
-                    title: Living Room Switch Configuration
-                    entities:
-                      - entity: input_select.living_room_switch_brightness_step
-                      - entity: input_select.living_room_switch_min_brightness
-                      - entity: input_select.living_room_switch_max_brightness
-                      - entity: input_select.living_room_button_1_short
-                      - entity: input_select.living_room_button_1_long
-                      - entity: input_select.living_room_button_2_short
-                      - entity: input_select.living_room_button_3_short
-                      - entity: input_select.living_room_button_4_short
-                      - entity: input_select.living_room_button_4_long
+                - type: entities
+                  title: Living Room Switch Configuration
+                  entities:
+                    - entity: input_select.living_room_switch_brightness_step
+                    - entity: input_select.living_room_switch_min_brightness
+                    - entity: input_select.living_room_switch_max_brightness
+                    - entity: input_select.living_room_button_1_short
+                    - entity: input_select.living_room_button_1_long
+                    - entity: input_select.living_room_button_2_short
+                    - entity: input_select.living_room_button_3_short
+                    - entity: input_select.living_room_button_4_short
+                    - entity: input_select.living_room_button_4_long
           
           - type: conditional
             conditions:
@@ -109,23 +101,18 @@ views:
                     - entity: input_select.kitchen_schedule_4_scene
                     - entity: input_select.kitchen_schedule_5_scene
                     - entity: input_select.kitchen_default_scene
-                - type: conditional
-                  conditions:
-                    - entity: input_select.room_switch_selector
-                      state: main_switch
-                  card:
-                    type: entities
-                    title: Kitchen Switch Configuration
-                    entities:
-                      - entity: input_select.kitchen_switch_brightness_step
-                      - entity: input_select.kitchen_switch_min_brightness
-                      - entity: input_select.kitchen_switch_max_brightness
-                      - entity: input_select.kitchen_button_1_short
-                      - entity: input_select.kitchen_button_1_long
-                      - entity: input_select.kitchen_button_2_short
-                      - entity: input_select.kitchen_button_3_short
-                      - entity: input_select.kitchen_button_4_short
-                      - entity: input_select.kitchen_button_4_long
+                - type: entities
+                  title: Kitchen Switch Configuration
+                  entities:
+                    - entity: input_select.kitchen_switch_brightness_step
+                    - entity: input_select.kitchen_switch_min_brightness
+                    - entity: input_select.kitchen_switch_max_brightness
+                    - entity: input_select.kitchen_button_1_short
+                    - entity: input_select.kitchen_button_1_long
+                    - entity: input_select.kitchen_button_2_short
+                    - entity: input_select.kitchen_button_3_short
+                    - entity: input_select.kitchen_button_4_short
+                    - entity: input_select.kitchen_button_4_long
           
           - type: conditional
             conditions:
@@ -163,23 +150,18 @@ views:
                     - entity: input_select.bedroom_schedule_4_scene
                     - entity: input_select.bedroom_schedule_5_scene
                     - entity: input_select.bedroom_default_scene
-                - type: conditional
-                  conditions:
-                    - entity: input_select.room_switch_selector
-                      state: main_switch
-                  card:
-                    type: entities
-                    title: Bedroom Switch Configuration
-                    entities:
-                      - entity: input_select.bedroom_switch_brightness_step
-                      - entity: input_select.bedroom_switch_min_brightness
-                      - entity: input_select.bedroom_switch_max_brightness
-                      - entity: input_select.bedroom_button_1_short
-                      - entity: input_select.bedroom_button_1_long
-                      - entity: input_select.bedroom_button_2_short
-                      - entity: input_select.bedroom_button_3_short
-                      - entity: input_select.bedroom_button_4_short
-                      - entity: input_select.bedroom_button_4_long
+                - type: entities
+                  title: Bedroom Switch Configuration
+                  entities:
+                    - entity: input_select.bedroom_switch_brightness_step
+                    - entity: input_select.bedroom_switch_min_brightness
+                    - entity: input_select.bedroom_switch_max_brightness
+                    - entity: input_select.bedroom_button_1_short
+                    - entity: input_select.bedroom_button_1_long
+                    - entity: input_select.bedroom_button_2_short
+                    - entity: input_select.bedroom_button_3_short
+                    - entity: input_select.bedroom_button_4_short
+                    - entity: input_select.bedroom_button_4_long
           
           - type: conditional
             conditions:
@@ -217,23 +199,18 @@ views:
                     - entity: input_select.bathroom_schedule_4_scene
                     - entity: input_select.bathroom_schedule_5_scene
                     - entity: input_select.bathroom_default_scene
-                - type: conditional
-                  conditions:
-                    - entity: input_select.room_switch_selector
-                      state: main_switch
-                  card:
-                    type: entities
-                    title: Bathroom Switch Configuration
-                    entities:
-                      - entity: input_select.bathroom_switch_brightness_step
-                      - entity: input_select.bathroom_switch_min_brightness
-                      - entity: input_select.bathroom_switch_max_brightness
-                      - entity: input_select.bathroom_button_1_short
-                      - entity: input_select.bathroom_button_1_long
-                      - entity: input_select.bathroom_button_2_short
-                      - entity: input_select.bathroom_button_3_short
-                      - entity: input_select.bathroom_button_4_short
-                      - entity: input_select.bathroom_button_4_long
+                - type: entities
+                  title: Bathroom Switch Configuration
+                  entities:
+                    - entity: input_select.bathroom_switch_brightness_step
+                    - entity: input_select.bathroom_switch_min_brightness
+                    - entity: input_select.bathroom_switch_max_brightness
+                    - entity: input_select.bathroom_button_1_short
+                    - entity: input_select.bathroom_button_1_long
+                    - entity: input_select.bathroom_button_2_short
+                    - entity: input_select.bathroom_button_3_short
+                    - entity: input_select.bathroom_button_4_short
+                    - entity: input_select.bathroom_button_4_long
           
           - type: conditional
             conditions:
@@ -271,40 +248,30 @@ views:
                     - entity: input_select.hallway_schedule_4_scene
                     - entity: input_select.hallway_schedule_5_scene
                     - entity: input_select.hallway_default_scene
-                - type: conditional
-                  conditions:
-                    - entity: input_select.room_switch_selector
-                      state: main_switch
-                  card:
-                    type: entities
-                    title: Hallway Main Switch Configuration
-                    entities:
-                      - entity: input_select.hallway_switch_brightness_step
-                      - entity: input_select.hallway_switch_min_brightness
-                      - entity: input_select.hallway_switch_max_brightness
-                      - entity: input_select.hallway_button_1_short
-                      - entity: input_select.hallway_button_1_long
-                      - entity: input_select.hallway_button_2_short
-                      - entity: input_select.hallway_button_3_short
-                      - entity: input_select.hallway_button_4_short
-                      - entity: input_select.hallway_button_4_long
-                - type: conditional
-                  conditions:
-                    - entity: input_select.room_switch_selector
-                      state: secondary_switch
-                  card:
-                    type: entities
-                    title: Hallway Secondary Switch Configuration
-                    entities:
-                      - entity: input_select.hallway_2_switch_brightness_step
-                      - entity: input_select.hallway_2_switch_min_brightness
-                      - entity: input_select.hallway_2_switch_max_brightness
-                      - entity: input_select.hallway_2_button_1_short
-                      - entity: input_select.hallway_2_button_1_long
-                      - entity: input_select.hallway_2_button_2_short
-                      - entity: input_select.hallway_2_button_3_short
-                      - entity: input_select.hallway_2_button_4_short
-                      - entity: input_select.hallway_2_button_4_long
+                - type: entities
+                  title: Hallway Main Switch Configuration
+                  entities:
+                    - entity: input_select.hallway_switch_brightness_step
+                    - entity: input_select.hallway_switch_min_brightness
+                    - entity: input_select.hallway_switch_max_brightness
+                    - entity: input_select.hallway_button_1_short
+                    - entity: input_select.hallway_button_1_long
+                    - entity: input_select.hallway_button_2_short
+                    - entity: input_select.hallway_button_3_short
+                    - entity: input_select.hallway_button_4_short
+                    - entity: input_select.hallway_button_4_long
+                - type: entities
+                  title: Hallway Secondary Switch Configuration
+                  entities:
+                    - entity: input_select.hallway_2_switch_brightness_step
+                    - entity: input_select.hallway_2_switch_min_brightness
+                    - entity: input_select.hallway_2_switch_max_brightness
+                    - entity: input_select.hallway_2_button_1_short
+                    - entity: input_select.hallway_2_button_1_long
+                    - entity: input_select.hallway_2_button_2_short
+                    - entity: input_select.hallway_2_button_3_short
+                    - entity: input_select.hallway_2_button_4_short
+                    - entity: input_select.hallway_2_button_4_long
           
           - type: markdown
             content: >
